--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -9,5 +9,12 @@ $theme := {
   error: $red.accent-4
   success: $green.lighten-2
 }
-
+.side  {
+  height:  100%
+  margin-top:  0px
+  max-height:  calc(100% - 0px)
+  transform: translateX(-300px)
+  width: 300px
+  position:  absolute
+}
 @import '~vuetify/src/stylus/main'
